--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
   },
   "type": "wordpress-plugin",
   "require": {
+    "php": ">=5.3",
     "composer/installers": "~1.0",
     "aws/aws-sdk-php": "~3.18"
   }
