--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,11 @@
   "require": {
     "php": ">=5.3",
     "composer/installers": "~1.0",
-    "aws/aws-sdk-php": "~3.18",
-    "ext-mbstring": "*"
+    "aws/aws-sdk-php": "~3.18"
+  },
+  "config": {
+    "platform": {
+      "ext-mbstring": "*"
+    }
   }
 }
