--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
   "type": "wordpress-plugin",
   "require": {
     "php": ">=5.3",
-    "composer/installers": "~1.0 || ^2.0",
+    "composer/installers": "^1.0 || ^2.0",
     "aws/aws-sdk-php": "^3.18.0"
   }
 }
